--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^7.0.0-alpha.5",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native-stack": "^6.9.25",
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
